--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap" rel="stylesheet">
 
+    <!-- animate css  -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <!-- main css -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
@@ -25,7 +30,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light menu">
         <div class="container">
-          <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a>
+          <a class="navbar-brand animate__animated animate__bounce" href="#"><img src="images/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -76,7 +81,7 @@
                   <img src="images/bg-1.png" alt="" class="d-block">
                 </div>
                 <div class="col-10">
-                  <div class="carousel-inner">
+                  <div class="carousel-inner animate__animated animate__fadeIn">
                     <div class="carousel-item active">
                       <img src="images/banner-products/product-1.png" class="d-block w-100" alt="...">
                     </div>
@@ -237,7 +242,7 @@
           <div class="bcd"></div>
         </div>
       </div>
-      <div class="row">
+      <div class="row animate__animated animate__backInRight">
         <div class="col-md-6">
           <div class="row">
             <div class="col-md-6">
